--- a/src/renderer/assets/css/style.css
+++ b/src/renderer/assets/css/style.css
@@ -13,7 +13,7 @@
 }
 
 .color-environment {
-    background-color: #005a13;
+    background-color: #099600;
 }
 
 .isProduction {
@@ -22,13 +22,95 @@
 
 a.navbar-link:hover,
 a.navbar-link.is-active {
-    background-color: #005a13 !important;
+    background-color: #099600 !important;
     color: #fff !important;
 }
 
 a.navbar-link.isProduction:hover,
 a.navbar-link.isProduction.is-active {
     background-color: #900000 !important;
+}
+
+.content {
+    padding: 0 15px;
+}
+
+.p-0 {
+    padding: 0px;
+}
+
+.relative {
+    position: relative;
+}
+
+.b-0 {
+    border: 0px;
+    box-shadow: none;
+}
+
+.remove {
+    position: absolute;
+    top: 7px;
+    right: 5px;
+}
+
+.remove:hover {
+    background-color: #900000;
+}
+
+.border-bottom-gray {
+    border-bottom: 1px solid;
+}
+
+.reset {
+    margin: 0px !important;
+    padding: 0px !important;
+}
+
+.w-100 {
+    width: 100%;
+}
+
+.m-t-26 {
+    margin-top: 26px;
+}
+
+::-webkit-scrollbar {
+    width: 0px;
+    height: 0px;
+}
+
+label {
+    color: #9a9a9a;
+}
+
+.label {
+    font-size: 13px;
+}
+
+.title-content {
+    padding: 5px;
+    border-bottom: 1px solid rgba(50, 115, 220, 0.27);
+    color: #3273dc;
+    background-color: #fbfbfb;
+    font-weight: 500;
+}
+
+li,
+ul {
+    list-style: none;
+    margin: 0px;
+    padding: 0px;
+}
+
+.host-item {
+    position: relative;
+    width: 100%;
+    padding: 5px;
+}
+
+.host-item:nth-child(odd) {
+    background-color: #f6faff;
 }
 
 @media screen and (max-width: 1024px) {
