--- a/src/renderer/components/registerAction/registerAction.html
+++ b/src/renderer/components/registerAction/registerAction.html
@@ -26,7 +26,8 @@
                             <label class="label">Type</label>
                             <div class="control">
                                 <div class="select">
-                                    <select  v-model="action.actionType">
+                                    <select v-model="action.actionType">
+                                        <option value="">Select</option>
                                         <option value="setValue">Set Value</option>
                                         <option value="invokeMethod">Invoke Method</option>
                                     </select>
@@ -42,10 +43,23 @@
                             </div>
                         </div>
                     </div>
+                    <div class="column" v-if="action.actionType == 'setValue'">
+                        <div class="field">
+                            <label class="label">Property</label>
+                            <div class="control">
+                                <input class="input" type="text" placeholder="Property">
+                            </div>
+                        </div>
+                    </div>
+                    <div class="column" v-if="action.actionType == 'setValue'">
+                        <div class="field">
+                            <label class="label">Value</label>
+                            <div class="control">
+                                <input class="input" type="text" placeholder="Value">
+                            </div>
+                        </div>
+                    </div>
                 </div>
-            </div>
-            <div class="column ">
-                {{action.actionType}}
             </div>
             <div class="column ">
                 <a class="button w-100 is-info is-outlined m-t-26">
