--- a/src/renderer/components/registerAction/registerAction.html
+++ b/src/renderer/components/registerAction/registerAction.html
@@ -27,7 +27,7 @@
                             <div class="control">
                                 <div class="select">
                                     <select v-model="action.actionType">
-                                        <option value="">Select</option>
+                                        <option value="" selected>Select</option>
                                         <option value="setValue">Set Value</option>
                                         <option value="invokeMethod">Invoke Method</option>
                                     </select>
