--- a/src/renderer/assets/css/style.css
+++ b/src/renderer/assets/css/style.css
@@ -16,6 +16,14 @@
     background-color: #099600;
 }
 
+green {
+    color: #0ff900;
+}
+
+red {
+    color: #ff3939;
+}
+
 .isProduction {
     background-color: #900000;
 }
@@ -69,6 +77,10 @@ a.navbar-link.isProduction.is-active {
 
 .w-100 {
     width: 100%;
+}
+
+.m-0 {
+    margin: 0px !important
 }
 
 .m-t-26 {
@@ -147,4 +159,20 @@ ul {
 
 .select select {
     width: 100%;
+}
+
+.progress {
+    height: 5px !important;
+    border-radius: 0;
+}
+
+.footer {
+    padding: 15px;
+}
+
+.console {
+    background-color: #363636;
+    font-family: monospace;
+    color: #dedede;
+    font-size: 11px;
 }
