--- a/src/renderer/assets/css/style.css
+++ b/src/renderer/assets/css/style.css
@@ -6,6 +6,10 @@
     width: 100%;
 }
 
+.navbar {
+    box-shadow: 0px 2px 4px 0px rgba(54, 54, 54, 0.55);
+}
+
 .center {
     position: relative;
     text-align: center;
