Change load files methods

--- a/src/renderer/components/registerAction/registerAction.html
+++ b/src/renderer/components/registerAction/registerAction.html
@@ -26,7 +26,7 @@
                             <label class="label">Type</label>
                             <div class="control">
                                 <div class="select">
-                                    <select v-model="action.actionType">
+                                    <select v-model="register.action.actionType">
                                         <option value="" selected>Select</option>
                                         <option value="setValue">Set Value</option>
                                         <option value="invokeMethod">Invoke Method</option>
@@ -35,7 +35,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="column" v-if="action.actionType == 'invokeMethod'">
+                    <div class="column" v-if="register.action.actionType == 'invokeMethod'">
                         <div class="field">
                             <label class="label">Method</label>
                             <div class="control">
@@ -43,7 +43,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="column" v-if="action.actionType == 'setValue'">
+                    <div class="column" v-if="register.action.actionType == 'setValue'">
                         <div class="field">
                             <label class="label">Property</label>
                             <div class="control">
@@ -51,7 +51,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="column" v-if="action.actionType == 'setValue'">
+                    <div class="column" v-if="register.action.actionType == 'setValue'">
                         <div class="field">
                             <label class="label">Value</label>
                             <div class="control">
