--- a/src/renderer/components/home/Home.html
+++ b/src/renderer/components/home/Home.html
@@ -33,7 +33,7 @@
                 </div>
             </div>
             <div class="column ">
-                <a class="button w-100 is-info is-outlined m-t-26">
+                <a class="button w-100 is-info is-outlined m-t-24">
                     Execute
                 </a>
             </div>
@@ -46,7 +46,7 @@
         <ul class="m-0">
             <li>$Execute {{request.action}} in environment {{request.environment}}</li>
             <span v-for="item in environments">
-                <li  v-for="host in item.hosts">${{host}} / <span class="green">OK</span>
+                <li  v-for="host in item.hosts">${{host.ip}} / <span class="green">OK</span>
             </li>
             </span>
         </ul>
