--- a/src/renderer/components/registerEnvironment/RegisterEnvironment.html
+++ b/src/renderer/components/registerEnvironment/RegisterEnvironment.html
@@ -32,7 +32,7 @@
                 </div>
             </div>
             <div class="column ">
-                <a class="button w-100 is-info is-outlined m-t-26">
+                <a class="button w-100 is-info is-outlined m-t-24">
                     Add Environment
                 </a>
             </div>
@@ -48,7 +48,7 @@
         <div>
             <ul class="reset">
                 <li class="host-item" v-for="host in item.hosts">
-                    {{host}}
+                    {{host.ip}}
                     <span class="delete remove" aria-label="delete"></span>
                 </li>
                 <li class="host-item">
