--- a/src/renderer/assets/css/style.css
+++ b/src/renderer/assets/css/style.css
@@ -180,3 +180,9 @@ ul {
     color: #dedede;
     font-size: 11px;
 }
+
+.checkbox {
+    margin-top: 30px;
+    color: #000;
+    font-weight: bold;
+}
