--- a/src/renderer/components/registerAction/registerAction.html
+++ b/src/renderer/components/registerAction/registerAction.html
@@ -9,7 +9,7 @@
                         <div class="field">
                             <label class="label">Description</label>
                             <div class="control">
-                                <input class="input" type="text" placeholder="Description">
+                                <input class="input" type="text" v-model="register.action.name" placeholder="Description">
                             </div>
                         </div>
                     </div>
@@ -17,7 +17,7 @@
                         <div class="field">
                             <label class="label">Path</label>
                             <div class="control">
-                                <input class="input" type="text" placeholder="Path">
+                                <input class="input" type="text" v-model="register.action.path" placeholder="Path">
                             </div>
                         </div>
                     </div>
@@ -39,7 +39,7 @@
                         <div class="field">
                             <label class="label">Method</label>
                             <div class="control">
-                                <input class="input" type="text" placeholder="Method">
+                                <input class="input" type="text" v-model="register.action.method" placeholder="Method">
                             </div>
                         </div>
                     </div>
@@ -47,7 +47,7 @@
                         <div class="field">
                             <label class="label">Property</label>
                             <div class="control">
-                                <input class="input" type="text" placeholder="Property">
+                                <input class="input" type="text" v-model="register.action.property" placeholder="Property">
                             </div>
                         </div>
                     </div>
@@ -55,25 +55,30 @@
                         <div class="field">
                             <label class="label">Value</label>
                             <div class="control">
-                                <input class="input" type="text" placeholder="Value">
+                                <input class="input" type="text" v-model="register.action.value" placeholder="Value">
                             </div>
                         </div>
                     </div>
                 </div>
             </div>
             <div class="column ">
-                <a class="button w-100 is-info is-outlined m-t-24">
+                <a class="button w-100 is-info is-outlined m-t-24" v-on:click="addAction()" :disabled="!register.action.isValid ">
                     Add Action
                 </a>
             </div>
         </div>
     </div>
+    <article class="message is-danger is-small" v-if="register.action.message">
+        <div class="message-body">
+            {{register.action.message}}
+        </div>
+    </article>
     <hr>
     <h4 class="title">Action List</h4>
     <div class="box b-0 p-0" v-for="item in actions">
         <div class="relative title-content" v-bind:class="{ isProduction: item.isProduction}">
             <p class="reset">{{ item.name }}</p>
-            <span class="delete remove" aria-label="delete"></span>
+            <span class="delete remove" aria-label="delete" v-on:click="removeAction(item.id)"></span>
         </div>
         <div>
             <ul class="reset">
