--- a/src/renderer/assets/css/style.css
+++ b/src/renderer/assets/css/style.css
@@ -193,3 +193,39 @@ ul {
     border-radius: 7px;
     border: 1px solid #ff5d5d;
 }
+
+.expanded+.list-list {
+    display: block;
+}
+
+.list-list {
+    display: none;
+}
+
+.list-title {
+    padding-left: 25px;
+}
+
+.list-title.expanded:before {
+    border: 2px solid #9e9e9e;
+    border-bottom: 0;
+    border-left: 0;
+    top: 18px;
+}
+
+.list-title:before {
+    border: 2px solid #9e9e9e;
+    border-right: 0;
+    border-top: 0;
+    content: " ";
+    display: block;
+    height: 0.5em;
+    pointer-events: none;
+    position: absolute;
+    -webkit-transform: rotate(-45deg);
+    transform: rotate(-45deg);
+    width: 0.5em;
+    margin-top: -0.375em;
+    left: 10px;
+    top: 55%;
+}
