Add logo an fix navbar in mac

--- a/src/renderer/assets/css/style.css
+++ b/src/renderer/assets/css/style.css
@@ -250,3 +250,11 @@ ul {
 .box {
     margin-bottom: 0px !important;
 }
+
+.isMac {
+    display: inline-block
+}
+
+.isMac .navbar-brand {
+    float: right
+}
