--- a/src/renderer/components/home/Home.html
+++ b/src/renderer/components/home/Home.html
@@ -9,9 +9,9 @@
                             <label class="label">Environments</label>
                             <div class="control">
                                 <div class="select">
-                                    <select v-model="selectedEnv">
+                                    <select v-model="auxEnvId">
                                         <option value="" selected>Select</option>
-                                        <option :value="item" v-for="item in environments">{{item.name}}</option>
+                                        <option :value="item.id" v-for="item in environments">{{item.name}}</option>
                                     </select>
                                 </div>
                             </div>
@@ -22,19 +22,11 @@
                             <label class="label">Action</label>
                             <div class="control">
                                 <div class="select">
-                                    <select v-model="selectedAction">
+                                    <select v-model="auxActionId">
                                         <option value="" selected>Select</option>
-                                        <option :value="item" v-for="item in actions">{{item.name}}</option>
+                                        <option :value="item.id" v-for="item in actions">{{item.name}}</option>
                                     </select>
                                 </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="column" v-if="selectedAction.type === 'setValue'">
-                        <div class="field">
-                            <label class="label">Value</label>
-                            <div class="control">
-                                <input type="text" class="input" v-model="selectedAction.value">
                             </div>
                         </div>
                     </div>
@@ -47,7 +39,7 @@
             </div>
         </div>
     </div>
-    <article class="message is-danger" v-if="selectedEnv.isProduction">
+    <article class="message is-danger" v-if="request.environment.isProduction">
         <div class="message-header">
             <p class="reset">WARNING</p>
         </div>
@@ -55,6 +47,34 @@
             Current environment is PRODUCTION servers
         </div>
     </article>
+    <div v-if="request.action.id">
+        <ul class="reset">
+            <li class="host-item">
+                <label>Path:</label> {{ request.action.path }}
+            </li>
+            <li class="host-item">
+                <div class="columns">
+                    <div class="column" v-show="request.action.actionType == 'invokeMethod'">
+                        <label>Method</label>
+                        <input class="input" type="text" v-model="request.action.method" placeholder="Method">
+                    </div>
+                    <div class="column" v-show="request.action.actionType == 'setValue'">
+                        <label>Property:</label>
+                        <input class="input" type="text" v-model="request.action.property" placeholder="Property">
+                    </div>
+                    <div class="column" v-show="request.action.actionType == 'setValue'">
+                        <label>Value:</label>
+                        <input class="input" type="text" v-model="request.action.value" placeholder="Value">
+                    </div>
+                    <div class="column is-one-third">
+                        <a class="button m-t-17 w-100 is-info is-outlined m-t-24" :disabled="!request.action.isValid" v-on:click="saveRequestAction()">
+                            Save
+                        </a>
+                    </div>
+                </div>
+            </li>
+        </ul>
+    </div>
     <hr>
 
     <h4 class="title">Status</h4>
