--- a/src/renderer/components/registerAction/registerAction.html
+++ b/src/renderer/components/registerAction/registerAction.html
@@ -9,7 +9,7 @@
                         <div class="field">
                             <label class="label">Description</label>
                             <div class="control">
-                                <input class="input" type="text" v-model="register.action.name" placeholder="Description">
+                                <input class="input" :disabled="register.action.editId" type="text" v-model="register.action.name" placeholder="Description">
                             </div>
                         </div>
                     </div>
@@ -62,7 +62,7 @@
                 </div>
             </div>
             <div class="column ">
-                <a class="button w-100 is-info is-outlined m-t-24" v-on:click="addAction()" :disabled="!register.action.isValid ">
+                <a class="button w-100 is-info is-outlined m-t-24" v-on:click="addAction()" :disabled="!register.action.isValid">
                     Add Action
                 </a>
             </div>
