--- a/src/renderer/components/config/Config.html
+++ b/src/renderer/components/config/Config.html
@@ -12,6 +12,11 @@
                    Export Data
                 </a>
             </div>
+            <div class="column is-one-fifth">
+                <a class="button w-100 is-info is-outlined" v-on:click="mergeData()">
+                   Merge Data
+                </a>
+            </div>
         </div>
     </div>
 </section>
